# Chatgpt-Test-webpage

./: .gitignore  .step2_marker  GITHUB_PAGES_FIX.md  README.md  SELECTIVE-BUILD.md  TEST-INTEGRATION.md  TESTING.md  TEST_README.md  _config.yml  bottom-bar.js  build-test-definitions.js  deployment-info.test.js  engine-demo.html  index.html  index.md  package-lock.json  package.json  simple-engine-demo.html  snake-game-logic.js  snake-game-logic.test.js  snake-game-ui.test.js  snake-game.html  style.css  test-definitions.js  test-results.html  test-results.json  test-summary.json  todo-list-logic.js  todo-list-logic.test.js  top-bar.js  top-bar.test.js  unit-management-demo.html  unit-position-tracker.js  unit-type-tracker.js  unit-types.js  units.js  version-update.test.js
.github/: BRANCH_PROTECTION.md  CI_SETUP.md  copilot-instructions.md
_layouts/: default.html
bevy-game/: Cargo.toml  README.md  build.sh  check-coverage.sh  index.html
bevy-game/src/: lib.rs  main.rs
bevy-game/tests/: integration_test.rs
ecs-game/: README.md  demo.html  go.mod  index.html  main.go
engine/: README.md  game-engine.js
go-wasm-game/: README.md  TEST_README.md  build.sh  collision.go  environment.go  game.wasm  game_events.go  game_init.go  go.mod  index.html  js_interface.go  main.go  main.wasm  map.go  movement.go  movement_functions_test.go  pathfinding.go  paths.go  player.go  style.css  terrain.go  test-demo.html  tiles.go  top-bar.js  unit.go  unit_combat.go  unit_manager.go  unit_renderer.go  unit_spatial.go  unit_types.go  units.go  wasm_game_test.go
jekyll-site/: README.md  _config.yml  index.html  index.md
phaser-game/: index.html  snake-game.js  snake-game.test.js
rust-wasm-game/: Cargo.toml  README.md  build.sh  index.html
rust-wasm-game/pkg/: rust_wasm_game.d.ts  rust_wasm_game.js  rust_wasm_game_bg.wasm  rust_wasm_game_bg.wasm.d.ts
rust-wasm-game/src/: lib.rs
scripts/: bump-version.js  detect-changes.sh  generate-deployment-info.js  generate-test-summary.js  selective-build.sh  selective-test.sh  validate-workflows.sh
tests/: bevy-game-foundation.test.js  bottom-bar.test.js  deployment-info.test.js  deployment-timestamp.test.js  ecs-click-to-move.test.js  ecs-game-freeze-fix.test.js  ecs-game.test.js  ecs-target-component.test.js  (+31 more)
(+51 files in other folders)
