[package]
name = "rust-wasm-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "console",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "MouseEvent",
    "Window",
] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
opt-level = "s"